Avoid wrapping in work tiles

--- a/src/css/includes/site.less
+++ b/src/css/includes/site.less
@@ -41,8 +41,12 @@ img.cld-responsive {
   }
 }
 
+.box-items .box-item {
+  overflow: visible;
+}
+
 .box-items .box-item .desc {
-  padding: 15px 45px 40px 45px;
+  padding: 15px 25px 40px 25px;
   a {
     text-decoration: none;
   }
